click and collect an cours

--- a/magasin.html
+++ b/magasin.html
@@ -241,10 +241,190 @@
                 magasins partenaires
             </p>
         </section>
-        <section>
-            <p class="tm-description">Les avantages du click and collect</p>
-        </section>
 
+        <section class="cc">
+            <!-- Colonne gauche : avantages -->
+            <div class="cc-left">
+                <div class="cc-benefit">
+                    <div class="cc-ring">
+                        <!-- Remplace l'icône ci-dessous -->
+                        <img src="asset/icon/clock.png" alt="Icône délai" />
+                    </div>
+                    <div class="cc-benefit-text">
+                        <h4>Récupération rapide</h4>
+                        <p>Votre commande est prête en 24h en magasin</p>
+                    </div>
+                </div>
+
+                <div class="cc-benefit">
+                    <div class="cc-ring">
+                        <!-- Remplace l'icône ci-dessous -->
+                        <img src="asset/icon/jack.png" alt="Icône essai" />
+                    </div>
+                    <div class="cc-benefit-text">
+                        <h4>Essai avant récupération</h4>
+                        <p>Tester votre instrument avant de le prendre</p>
+                    </div>
+                </div>
+
+                <div class="cc-benefit">
+                    <div class="cc-ring">
+                        <!-- Remplace l'icône ci-dessous -->
+                        <img src="asset/icon/award.png" alt="Icône expert" />
+                    </div>
+                    <div class="cc-benefit-text">
+                        <h4>Conseil d’expert</h4>
+                        <p>Bénéficiez des conseils de nos partenaires</p>
+                    </div>
+                </div>
+
+                <div class="cc-benefit">
+                    <div class="cc-ring">
+                        <!-- Remplace l'icône ci-dessous -->
+                        <img src="asset/icon/truck.png" alt="Icône livraison" />
+                    </div>
+                    <div class="cc-benefit-text">
+                        <h4>Livraison gratuite</h4>
+                        <p>Pas de frais de port avec click and collect</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Colonne droite : résultats magasins -->
+            <div class="cc-right">
+                <article class="cc-shop">
+                    <div class="cc-media">
+                        <!-- Remplace l'image ci-dessous -->
+                        <img
+                            src="asset/img/shops/shop1.jpg"
+                            alt="Atelier cordes et bois"
+                        />
+                    </div>
+                    <div class="cc-body">
+                        <h3 class="cc-title">Atelier cordes et bois</h3>
+                        <div class="cc-row">
+                            <!-- Remplace l'icône ci-dessous -->
+                            <img
+                                class="cc-ico"
+                                src="asset/icon/pin.png"
+                                alt=""
+                            />
+                            <span>Paris</span>
+                        </div>
+                        <div class="cc-row cc-row-gap">
+                            <span class="cc-badge cc-badge-cc"
+                                >Click and Collect</span
+                            >
+                            <span class="cc-rating">
+                                <!-- Remplace l'icône étoile si besoin -->
+                                <img
+                                    class="cc-ico"
+                                    src="asset/icon/star-yellow.png"
+                                    alt=""
+                                />
+                                4,9
+                            </span>
+                        </div>
+                        <div class="cc-delay">Délai: 24h – 10h–19h</div>
+                    </div>
+                    <span class="cc-badge cc-badge-pop">
+                        <!-- Remplace l'icône si besoin -->
+                        <img
+                            class="cc-ico"
+                            src="asset/icon/star-line.png"
+                            alt=""
+                        />
+                        Populaire
+                    </span>
+                </article>
+
+                <article class="cc-shop">
+                    <div class="cc-media">
+                        <!-- Remplace l'image ci-dessous -->
+                        <img
+                            src="asset/img/shops/shop2.jpg"
+                            alt="Guitare du sud"
+                        />
+                    </div>
+                    <div class="cc-body">
+                        <h3 class="cc-title">Guitare du sud</h3>
+                        <div class="cc-row">
+                            <img
+                                class="cc-ico"
+                                src="asset/icon/pin.png"
+                                alt=""
+                            />
+                            <span>Marseille</span>
+                        </div>
+                        <div class="cc-row cc-row-gap">
+                            <span class="cc-badge cc-badge-cc"
+                                >Click and Collect</span
+                            >
+                            <span class="cc-rating">
+                                <img
+                                    class="cc-ico"
+                                    src="asset/icon/star-yellow.png"
+                                    alt=""
+                                />
+                                4,7
+                            </span>
+                        </div>
+                        <div class="cc-delay">Délai: 24h – 10h–19h</div>
+                    </div>
+                    <span class="cc-badge cc-badge-pop">
+                        <img
+                            class="cc-ico"
+                            src="asset/icon/star-line.png"
+                            alt=""
+                        />
+                        Populaire
+                    </span>
+                </article>
+
+                <article class="cc-shop">
+                    <div class="cc-media">
+                        <!-- Remplace l'image ci-dessous -->
+                        <img
+                            src="asset/img/shops/shop3.jpg"
+                            alt="Music store Lile"
+                        />
+                    </div>
+                    <div class="cc-body">
+                        <h3 class="cc-title">Music store Lile</h3>
+                        <div class="cc-row">
+                            <img
+                                class="cc-ico"
+                                src="asset/icon/pin.png"
+                                alt=""
+                            />
+                            <span>Lille</span>
+                        </div>
+                        <div class="cc-row cc-row-gap">
+                            <span class="cc-badge cc-badge-cc"
+                                >Click and Collect</span
+                            >
+                            <span class="cc-rating">
+                                <img
+                                    class="cc-ico"
+                                    src="asset/icon/star-yellow.png"
+                                    alt=""
+                                />
+                                4,6
+                            </span>
+                        </div>
+                        <div class="cc-delay">Délai: 24h – 10h–19h</div>
+                    </div>
+                    <span class="cc-badge cc-badge-pop">
+                        <img
+                            class="cc-ico"
+                            src="asset/icon/star-line.png"
+                            alt=""
+                        />
+                        Populaire
+                    </span>
+                </article>
+            </div>
+        </section>
         <footer class="tm-footer">
             <div class="tmf-grid">
                 <!-- ===== Colonne 1 : Logo + baseline + réseaux ===== -->
