--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="asset/Style/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            rel="icon"
+            type="image/png"
+            href="asset/Logo/logo_tone_maker.png"
+        />
     </head>
 
     <body>
@@ -36,7 +41,9 @@
 
                 <!-- 🔽 Navigation centre (desktop uniquement) -->
                 <div class="input nav-center desktop-only">
-                    <a class="value" href="magasin.html">Magasin et partenaires</a>
+                    <a class="value" href="magasin.html"
+                        >Magasin et partenaires</a
+                    >
 
                     <button class="value">Tout les produits</button>
 
