--- a/customisation.html
+++ b/customisation.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="asset/Style/customisation.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            rel="icon"
+            type="image/png"
+            href="asset/Logo/logo_tone_maker.png"
+        />
     </head>
 
     <body>
