--- a/magasin.html
+++ b/magasin.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="asset/Style/magasin.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            rel="icon"
+            type="image/png"
+            href="asset/Logo/logo_tone_maker.png"
+        />
     </head>
 
     <body>
@@ -248,7 +253,10 @@
                 <div class="cc-benefit">
                     <div class="cc-ring">
                         <!-- Remplace l'icône ci-dessous -->
-                        <img src="asset/icon/clock.png" alt="Icône délai" />
+                        <img
+                            src="asset/icon/time-outline.png"
+                            alt="Icône délai"
+                        />
                     </div>
                     <div class="cc-benefit-text">
                         <h4>Récupération rapide</h4>
@@ -259,7 +267,7 @@
                 <div class="cc-benefit">
                     <div class="cc-ring">
                         <!-- Remplace l'icône ci-dessous -->
-                        <img src="asset/icon/jack.png" alt="Icône essai" />
+                        <img src="asset/icon/music-f.png" alt="Icône essai" />
                     </div>
                     <div class="cc-benefit-text">
                         <h4>Essai avant récupération</h4>
@@ -296,7 +304,7 @@
                     <div class="cc-media">
                         <!-- Remplace l'image ci-dessous -->
                         <img
-                            src="asset/img/shops/shop1.jpg"
+                            src="asset/IMG/page_slider/Rockeur_modele_small.png"
                             alt="Atelier cordes et bois"
                         />
                     </div>
@@ -306,7 +314,7 @@
                             <!-- Remplace l'icône ci-dessous -->
                             <img
                                 class="cc-ico"
-                                src="asset/icon/pin.png"
+                                src="asset/icon/map-pin_small.png"
                                 alt=""
                             />
                             <span>Paris</span>
@@ -319,7 +327,7 @@
                                 <!-- Remplace l'icône étoile si besoin -->
                                 <img
                                     class="cc-ico"
-                                    src="asset/icon/star-yellow.png"
+                                    src="asset/icon/star_samll.png"
                                     alt=""
                                 />
                                 4,9
@@ -331,7 +339,7 @@
                         <!-- Remplace l'icône si besoin -->
                         <img
                             class="cc-ico"
-                            src="asset/icon/star-line.png"
+                            src="asset/icon/star_tiny.png"
                             alt=""
                         />
                         Populaire
@@ -342,7 +350,7 @@
                     <div class="cc-media">
                         <!-- Remplace l'image ci-dessous -->
                         <img
-                            src="asset/img/shops/shop2.jpg"
+                            src="asset/IMG/page_slider/folk_modèle_samll.png"
                             alt="Guitare du sud"
                         />
                     </div>
@@ -351,7 +359,7 @@
                         <div class="cc-row">
                             <img
                                 class="cc-ico"
-                                src="asset/icon/pin.png"
+                                src="asset/icon/map-pin_small.png"
                                 alt=""
                             />
                             <span>Marseille</span>
@@ -363,7 +371,7 @@
                             <span class="cc-rating">
                                 <img
                                     class="cc-ico"
-                                    src="asset/icon/star-yellow.png"
+                                    src="asset/icon/star_samll.png"
                                     alt=""
                                 />
                                 4,7
@@ -374,7 +382,7 @@
                     <span class="cc-badge cc-badge-pop">
                         <img
                             class="cc-ico"
-                            src="asset/icon/star-line.png"
+                            src="asset/icon/star_tiny.png"
                             alt=""
                         />
                         Populaire
@@ -385,7 +393,7 @@
                     <div class="cc-media">
                         <!-- Remplace l'image ci-dessous -->
                         <img
-                            src="asset/img/shops/shop3.jpg"
+                            src="asset/IMG/page_slider/Rythmique_modèle_samll.png"
                             alt="Music store Lile"
                         />
                     </div>
@@ -394,7 +402,7 @@
                         <div class="cc-row">
                             <img
                                 class="cc-ico"
-                                src="asset/icon/pin.png"
+                                src="asset/icon/map-pin_small.png"
                                 alt=""
                             />
                             <span>Lille</span>
@@ -406,7 +414,7 @@
                             <span class="cc-rating">
                                 <img
                                     class="cc-ico"
-                                    src="asset/icon/star-yellow.png"
+                                    src="asset/icon/star_samll.png"
                                     alt=""
                                 />
                                 4,6
@@ -417,7 +425,7 @@
                     <span class="cc-badge cc-badge-pop">
                         <img
                             class="cc-ico"
-                            src="asset/icon/star-line.png"
+                            src="asset/icon/star_tiny.png"
                             alt=""
                         />
                         Populaire
