--- a/Index.html
+++ b/Index.html
@@ -292,7 +292,7 @@
                                 src="asset/icon/icon_corps_guitare.png"
                                 alt=""
                             />
-                            <span>Corps de la guitare</span>
+                            <span>Corps</span>
                         </label>
 
                         <!-- /* ICON NAVBAR : Micros — remplace le src */ -->
@@ -312,7 +312,7 @@
                                 src="asset/icon/icon_kit_diy.png"
                                 alt=""
                             />
-                            <span>Kits DIY</span>
+                            <span>Kits</span>
                         </label>
                     </div>
                 </nav>
@@ -1309,5 +1309,6 @@
                 }
             });
         </script>
+        
     </body>
 </html>
