--- a/magasin.html
+++ b/magasin.html
@@ -19,7 +19,7 @@
         <header>
             <!-- ✅ Logo mobile centré (en dehors de .navbar) -->
             <div class="mobile-logo">
-                <a href="Index.html">
+                <a href="index.html">
                     <img
                         src="asset/Logo/logo_tone_maker.png"
                         alt="Logo Tone Maker"
@@ -37,7 +37,7 @@
 
                 <!-- 🔽 Logo desktop (desktop uniquement) -->
                 <div class="input nav-left">
-                    <a href="Index.html">
+                    <a href="index.html">
                         <img src="asset/Logo/logo_tone_maker.png" alt="Logo" />
                     </a>
                     <span class="value desktop-only">Tone Maker</span>
